# framework-buddy

./: Cargo.toml  Makefile  README.md  fish.june.framework-buddy.desktop  fish.june.pkexec.framework-buddy.policy  icons.toml
src/: brightness.rs  charge_limit.rs  info.rs  main.rs  util.rs
