[package]
name = "framework-buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framework_lib = { git = "https://github.com/FrameworkComputer/framework-system/", version = "0.1.0" }
libhelium = "0.3.0"
num-traits = "0.2.19"
relm4 = "0.8.1"
relm4-icons = "0.8.3"
